# riddler-bench

./: .env.example  .gitignore  FRONTEND_DATA_FORMAT.md  IMPROVEMENTS_SUMMARY.md  README.md  analyze_results.py  full_benchmark_analysis.py  image_prompts.txt  pyproject.toml  run_benchmark.sh  test_llms.py  test_o3_minimal.py  vercel.json
config/: models.yaml
data/: benchmark.jsonl  benchmark_oblique_harder.jsonl  benchmark_oblique_multihop.jsonl  benchmark_oblique_multihop_hard.jsonl  benchmark_oblique_multihop_v1.jsonl  hard_benchmark.jsonl  smoke.jsonl
generate_kg/: assess_v6_riddles.py  comprehensive_test.py  evaluate_llm_success_rates.py  generate_kg_questions.py  generate_kg_questions_v2.py  generate_kg_questions_v3.py  generate_kg_questions_v4.py  generate_kg_questions_v5.py  generate_kg_questions_v6.py  generate_oblique_multihop.py  generate_oblique_multihop_hard.py  generate_v7_balanced.py  riddle_quality_framework.py
results-archive/20250809-210926-smoke/: summary.csv
results-archive/20250809-232659-smoke/: azure_openai_gpt-4o.jsonl  azure_openai_gpt-5-chat.jsonl  azure_openai_gpt-5-mini.jsonl  azure_openai_gpt-5-nano.jsonl  azure_openai_gpt-5.jsonl  azure_openai_o3-pro.jsonl  groq_deepseek-r1-distill-llama-70b.jsonl  groq_gemma2-9b-it.jsonl  groq_llama-3.1-8b-instant.jsonl  groq_llama-3.3-70b-versatile.jsonl  groq_moonshotai_kimi-k2-instruct.jsonl  groq_openai_gpt-oss-120b.jsonl  groq_qwen_qwen3-32b.jsonl  openrouter_meta-llama_llama-3.1-405b-instruct.jsonl  (+6 more)
results-ui/: .gitignore  .vercelignore  README.md  package-lock.json  package.json  vercel.json
(+160 files in other folders)
